--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+logging.level.org.springframework: DEBUG
 
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.datasource.url=jdbc:h2:mem:trackzilla-app-db
+
+# ThymeLeaf
+spring.thymeleaf.template-loader-path: classpath:/templates
+spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache: false
