--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.url=jdbc:h2:mem:trackzilla-app-db
 spring.thymeleaf.template-loader-path: classpath:/templates
 spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: false
+
+#Actuator
+management.endpoints.web.exposure.include=info,health,metrics,loggers,beans,mappings
+management.endpoint.health.show-details=always
